name:                cntlm-password
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Michaelt293/cntlm-password#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Thomas
maintainer:          Michaelt293@gmail.com
copyright:           2018 Michael Thomas
category:            Command line tool
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base
                     , text
                     , turtle
                     , unix
  ghc-options:         -Wall
  default-language:    Haskell2010

executable cntlm-password
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , cntlm-password
                     , turtle

test-suite cntlm-password-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cntlm-password
                     , hspec
                     , text
                     , turtle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
